# websearch-mcp

./: Cargo.toml  GETTING_STARTED.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: browser.rs  cleanup.rs  config.rs  error.rs  lib.rs  main.rs  registry.rs  session.rs
src/cleanup/: html.rs  markdown.rs  mod.rs
src/providers/: brave.rs  duckduckgo.rs  google.rs  mod.rs  navigate.rs
src/tools/: browser_tools.rs  fetch.rs  mod.rs  search.rs
tests/: config.rs  providers.rs
