[package]
name = "websearch"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
chromiumoxide = { version = "0.9", default-features = false, features = [
    "bytes",
    "rustls",
    "zip8",
] }
html-to-markdown-rs = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
url = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
thiserror = "2"
futures = "0.3"
